# wdr

./: .gitignore  Cargo.toml  README.md
docs/: wdr-design.drawio
src/: config.rs  logger.rs  main.rs  manager.rs  model.rs  process.rs  zk.rs
src/wdr/: config.rs  event.rs  info.rs  main.rs  manager.rs  model.rs  process.rs  setting.rs  zk.rs
src/wdr-manager/: main.rs  manager.rs  setting.rs
src/wdrlib/: info.rs  lib.rs  model.rs  zk.rs
src/wdrm/: main.rs  manager.rs
src/wdrm/service/: config.rs  info.rs  mod.rs  node.rs
wdr/: Cargo.toml  Settings.toml
wdr/src/: event.rs  main.rs  manager.rs  process.rs  settings.rs
wdrlib/: Cargo.toml
wdrlib/src/: config.rs  info.rs  zk.rs
wdrm/: Cargo.toml  Settings.toml
wdrm/src/: main.rs  settings.rs
wdrm/src/service/: config.rs  info.rs  node.rs
