[package]
name = "wdr"
version = "0.1.0"
authors = ["whichxjy <whichxjy@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zookeeper = "0.5"
log = "0.4.0"
env_logger = "0.8.2"
stdext = "0.2.1"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.2.0"
lazy_static = "1.4.0"
