[package]
name = "wdr"
version = "0.1.0"
authors = ["whichxjy <whichxjy@gmail.com>"]
edition = "2018"

[[bin]]
name = "wdr"
path = "src/wdr/main.rs"

[[bin]]
name = "wdr-manager"
path = "src/wdr-manager/main.rs"

[lib]
name = "wdrlib"
path = "src/wdrlib/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zookeeper = "0.5"
log = "0.4"
env_logger = "0.8.2"
fnlog = "0.1.0"
stdext = "0.2.1"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
url = "2.2.0"
lazy_static = "1.4.0"
ctrlc = { version = "3.0", features = ["termination"] }
crossbeam = "0.8"
